--- a/src/gamestates/CMakeLists.txt
+++ b/src/gamestates/CMakeLists.txt
@@ -3,3 +3,6 @@ register_gamestate("dosowisko")
 register_gamestate("slavic")
 register_gamestate("walk")
 register_gamestate("fall")
+register_gamestate("catch")
+register_gamestate("fine")
+register_gamestate("notfine")
