--- a/src/gamestates/CMakeLists.txt
+++ b/src/gamestates/CMakeLists.txt
@@ -7,3 +7,5 @@ register_gamestate("fall")
 register_gamestate("catch")
 register_gamestate("fine")
 register_gamestate("notfine")
+register_gamestate("logo")
+register_gamestate("menu")
