update libsuperderpy; this is version 1.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(cinf C)
 
 SET(LIBSUPERDERPY_GAMENAME "cinf" CACHE INTERNAL "")
 SET(LIBSUPERDERPY_GAMENAME_PRETTY "Computer Is (Not) Fine" CACHE INTERNAL "")
+SET(LIBSUPERDERPY_ORIENTATION "LANDSCAPE" CACHE INTERNAL "")
+SET(LIBSUPERDERPY_VERSION "1.1" CACHE INTERNAL "")
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" "${CMAKE_SOURCE_DIR}/libsuperderpy/cmake")
 
