--- a/src/gamestates/CMakeLists.txt
+++ b/src/gamestates/CMakeLists.txt
@@ -1,11 +1,2 @@
-register_gamestate("loading")
-register_gamestate("dosowisko")
-register_gamestate("slavic")
-register_gamestate("intro")
-register_gamestate("walk")
-register_gamestate("fall")
-register_gamestate("catch")
-register_gamestate("fine")
-register_gamestate("notfine")
-register_gamestate("logo")
-register_gamestate("menu")
+include(libsuperderpy-gamestates)
+
