--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ SET(LIBSUPERDERPY_GAMENAME_PRETTY "Computer Is (Not) Fine" CACHE INTERNAL "")
 SET(LIBSUPERDERPY_APPID "net.dosowisko.cinf")
 SET(LIBSUPERDERPY_ORIENTATION "LANDSCAPE" CACHE INTERNAL "")
 SET(LIBSUPERDERPY_VERSION "1.2" CACHE INTERNAL "")
+SET(LIBSUPERDERPY_VITA_TITLEID "DOS1CINF0" CACHE INTERNAL "")
 
 set(EMSCRIPTEN_TOTAL_MEMORY "128" CACHE INTERNAL "")
 
